kustomize/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: library-service
  name: library-service
  namespace: sid-behera88-dev
spec:
  host: library-service-sid-behera88-dev.apps.sandbox-m4.g2pi.p1.openshiftapps.com
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: library-service
    weight: 100
  wildcardPolicy: None
